# PuntoPertenencia

./: .gitignore  CMakeLists.txt  Instrucciones.txt  LICENSE  README.md
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
debug/.cmake/api/v1/reply/: cache-v2-c8ecdb48551de2087987.json  cmakeFiles-v1-060f431b662941eb11d9.json  codemodel-v2-f13de7402baadefa9c5b.json  index-2025-08-21T17-17-43-0040.json  target-PuntoPertenencia-Debug-c17ecaf1e32edba61fce.json  toolchains-v1-064b28f341fa0dc3e561.json
realease/: CMakeCache.txt  Makefile  PuntoPertenencia  cmake_install.cmake
src/: main.cpp  puntopertencia.h  salidas.cpp
src/coordenadas/: CCG2CCL.cpp  ITRF2CCL.cpp
src/lectores/: LectorAgeb.cpp  LectorAgeb.h  LectorEnt.cpp  LectorEnt.h  LectorINT.cpp  LectorINT.h  LectorMnz.cpp  LectorMnz.h  LectorMun.cpp  LectorMun.h  LectorRec.cpp  LectorRec.h
src/objetos/: Ageb.h  Entidad.h  Manzana.h  Municipio.h  Recurso.h
